# stake-pool-wrapper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: build-upload-binaries.yaml  publish-all-crates.yaml  publish-cli.yaml  publish-crate.yaml  publish-crates.yaml  publish-idl-package.yaml
cli/: Cargo.toml
cli/src/: cli_args.rs  cli_signer.rs  lib.rs  stake_pool_wrapper.rs  stake_pool_wrapper_handler.rs
client/stake-pool/: Cargo.toml
client/stake-pool/src/: lib.rs
config/: program.env
core/: Cargo.toml  README.md
examples/stake-pool/: Cargo.toml
idl/: idl.json
program/: Cargo.toml  README.md
program/src/: lib.rs
scripts/: codama.cjs  generate-clients.ts  idl.json  idl.ts  idl_copy.json  idl_copy1.json  parser.js  stake_pool.json  vault_whitelist.json
scripts/src/generated_sdk/: programs.rs
scripts/src/generated_sdk/accounts/: config.rs  mod.rs  vault.rs  vault_ncn_slasher_operator_ticket.rs  vault_ncn_slasher_ticket.rs  vault_ncn_ticket.rs  vault_operator_delegation.rs  vault_staker_withdrawal_ticket.rs  vault_update_state_tracker.rs
scripts/src/generated_sdk/errors/: jito_vault.rs  mod.rs
scripts/src/generated_sdk/instructions/: add_delegation.rs  burn_withdrawal_ticket.rs  change_withdrawal_ticket_owner.rs  close_vault_update_state_tracker.rs  cooldown_delegation.rs  cooldown_vault_ncn_slasher_ticket.rs  cooldown_vault_ncn_ticket.rs  crank_vault_update_state_tracker.rs  create_token_metadata.rs  delegate_token_account.rs  enqueue_withdrawal.rs  initialize_config.rs  initialize_vault.rs  initialize_vault_ncn_slasher_operator_ticket.rs  initialize_vault_ncn_slasher_ticket.rs  initialize_vault_ncn_ticket.rs  initialize_vault_operator_delegation.rs  initialize_vault_update_state_tracker.rs  initialize_vault_with_mint.rs  mint_to.rs  mod.rs  set_admin.rs  set_config_admin.rs  set_deposit_capacity.rs  set_fees.rs  set_is_paused.rs  set_program_fee.rs  set_program_fee_wallet.rs  set_secondary_admin.rs  update_token_metadata.rs  update_vault_balance.rs  warmup_vault_ncn_slasher_ticket.rs  warmup_vault_ncn_ticket.rs
scripts/src/generated_sdk/types/: create_metadata_account_args_v3.rs  data_v2.rs  delegation_state.rs  mod.rs  slot_toggle.rs  update_metadata_account_args_v2.rs  vault_admin_role.rs  withdrawal_allocation_method.rs
sdk/: Cargo.toml  README.md
sdk/src/: instruction.rs
undefined/src/generated_sdk/instructions/: create_token_metadata.rs  decrease_validator_stake.rs  deposit_sol.rs  update_validator_list_balance.rs
undefined/src/generated_sdk/types/: lockup.rs  mod.rs
