[workspace]
members = [
	"cli",
	"core",
	"program",
	"sdk"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
borsh = "1.5.7"
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
env_logger = "0.10.2"
fragmetric-cpi = "0.5.1"
log = "0.4.22"
shank = "0.4.2"
solana-account-decoder = "2.2.1"
solana-cli-config = "2.2.1"
solana-program = "2.2.1"
solana-program-test = "2.2.1"
solana-remote-wallet = "2.2.1"
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-sdk = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
stake-pool-wrapper-sdk = { path = "./sdk" }
