[workspace]
members = [
	"cli",
	"core",
	"examples/stake-pool",
	"program",
	"sdk"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
borsh-legacy = { package = "borsh", version = "0.9" }
borsh = { version = "1.5.7", features = ["derive"] }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
env_logger = "0.10.2"
fragmetric-cpi = "0.5.1"
log = "0.4.22"
shank = "0.4.2"
solana-account-decoder = "2.2.1"
solana-cli-config = "2.2.1"
solana-program = "2.2.1"
solana-program-test = "2.2.1"
solana-remote-wallet = "2.2.1"
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-sdk = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-stake-pool-legacy = { package = "spl-stake-pool", version = "0.6.4", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
stake-pool-wrapper-sdk = { version = "0.1.7", path = "./sdk" }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
yellowstone-vixen = "0.3.0"
yellowstone-vixen-core = "0.3.0"
yellowstone-vixen-parser = "0.3.0"
