[package]
name = "stake-pool-wrapper-program"
version = "0.1.0"
edition = "2021"
description = ""
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake_pool_wrapper_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
spl-stake-pool = { workspace = true }
stake-pool-wrapper-sdk = { workspace = true }
